# BlueGalaxyEnergy

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  implementation_details.md  pyproject.toml
src/: affineencoding.hpp  approximateencoding.hpp  baseencoding.hpp  computeQPtilde.hpp  encodingkey.hpp  inputReader.hpp  main.cpp  matrix.hpp  outputwb.hpp  precompute.hpp  precomputeBetaTable.sage  relationencoding.hpp  utils.hpp
src/bluegalaxyenergy/: AES.py  AESEncoded.py  BGE.py  BGEGenInput.py  ByteOrder.py  Encoding.py  Exceptions.py  FinalizeUnshuffled.py  README.md  WhiteBoxedAES.py  WhiteBoxedAESTest.py  WhiteBoxedUnshuffledProxy.py  __init__.py  __main__.py
