[build-system]
# cf https://github.com/scikit-build/scikit-build-core
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "bluegalaxyenergy"
version = "2.0.0"
description="A tool to perform the so-called BGE attack"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
authors = [
  {name = "Laurent Grémy"},
  {name = "Nicolas Surbayrole"},
  {name = "Philippe Teuwen"},
]

[project.urls]
repository = "https://github.com/SideChannelMarvels/BlueGalaxyEnergy"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
ninja.make-fallback = true
strict-config = true
install.strip = false
